# django-rest-votings

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  env-variables-example.txt  pyproject.toml  requirements.txt
doc/: tech-and-standards.txt
doc/analysis/: domain-model.dia
docker/: .env.dev  Dockerfile_waiter  dev-requirements.txt
tests/: test_models.py
votings/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
votings/templates/base/: base.html
votings/templates/votings/: my_model_form.html  my_model_list.html
wrapper/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
wrapper/templates/base/: base.html
wrapper/templates/registration/: login.html  register.html
